update queue type java call as well